# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.1.0/).

## [1.3.1] - 2025-06-05

### Changed

- Delegation fee in percentages for backward compatibility.

## [1.3.0] - 2025-06-05

### Added

- Decoding of stake transactions (AddPermissionlessDelegator and AddPermissionlessValidator).

### Changed

- Contract registry update.
- Dependency update.

## [1.2.0] - 2024-11-07

### Added

- Contract proxy detection and decoding.

### Changed

- Flare network contract identification.
- Contract registry update.
- Dependency update.

## [1.1.0] - 2024-08-09

### Changed

- Updated network ids.

## [1.0.7] - 2024-07-23

### Added

- Contract method ABI for EVM transactions.

## [1.0.6] - 2024-04-12

### Changed

- Checksummed recipient address for EVM transactions.

### Fixed

- EVM transaction type definition for transactions with zero data.
- Handling of unknown network.

## [1.0.5] - 2024-02-23

### Added

- Tests.

## [1.0.4] - 2024-02-22

### Added

- Support for base64 encoded inputs.
- Support for GZIP compressioned inputs.

## [1.0.3] - 2024-02-15

### Removed

- Warning when transaction fee is not set.

## [1.0.2] - 2024-02-12

### Added

- Transaction types exposed.

## [1.0.1] - 2024-02-08

### Added

- Contract data acquisition for unkown networks.

## [1.0.0] - 2024-01-20

### Added

- Initial version.