@@ -460,6 +460,25 @@
     }
   },
   {
+    "txHex": "0x0000000000220000007200000000000000000000000000000000000000000000000000000000000000000000000258734f94af871c3d131b56131b6fb7a0291eacadd261e69dfb42a9cdf6f7fddd00000007000000000098968000000000000000000000000100000001e82db275bf45d4a1fc48b1b05df9f758b9f10f4058734f94af871c3d131b56131b6fb7a0291eacadd261e69dfb42a9cdf6f7fddd00000007000000003af2f14000000000000000000000000100000001842e184fe5b9b7f87666bc687af517feabfd1da200000001256f3638bedcd15011f738fe5d0cad8b089863bb73144186a0daa61c2897eaf20000000058734f94af871c3d131b56131b6fb7a0291eacadd261e69dfb42a9cdf6f7fddd00000005000000003b9aca000000000100000000000000000000000100000009000000019ce3d7c604a78b428ff3cbfdc0664d1d298bfc2a558af96fd025bcb0d02529215288a6c8cc4f498d6c31e47329156ea97a2bbf3d363b6ac92760addb3d20804d01",
+    "txVerification": {
+      "network": "Flare Testnet Coston2",
+      "type": "transferP",
+      "description": "Funds transfer on P-chain",
+      "recipients": [
+        "costwo1aqkmyadlgh22rlzgkxc9m70htzulzr6qwa98m3",
+        "costwo1sshpsnl9hxmlsanxh3584aghl64l68dz7ru8pf"
+      ],
+      "values": [
+        "10000000000000000",
+        "989000000000000000"
+      ],
+      "fee": "1000000000000000",
+      "warnings": [],
+      "messageToSign": "0x13d857d39e45984a428efcd7d2231e72cfbe24c15605e8de09b77c0bdca5655e"
+    }
+  },
+  {
     "txHex": "0x00000000001a000000720000000000000000000000000000000000000000000000000000000000000000000000000000000194747fe00131b5d2b0c162bb8262be4753b0a54fded1c4858107aa6e31ff647b0000000058734f94af871c3d131b56131b6fb7a0291eacadd261e69dfb42a9cdf6f7fddd0000000500002d79883d20000000000100000000000000000d7d0cf4ac62e8d88afd1222441d93f7c7e0f27600000000683d599d00000000684fce9d00002d79883d200000000000000000000000000000000000000000000000000000000000000000000000000158734f94af871c3d131b56131b6fb7a0291eacadd261e69dfb42a9cdf6f7fddd0000000700002d79883d20000000000000000000000000010000000121ecb223daf5bec57c88276a3086c7aeb88035cb0000000b0000000000000000000000010000000121ecb223daf5bec57c88276a3086c7aeb88035cb0000000100000009000000017ab483283cc667613dfd6103ead2e47293ea421cc4535a06b669d3e05cdd162d0b69646de4d4d00afbcba57eb9ed02636c952733b9ddb3b3d4664d90966a816401",
     "txVerification": {
       "network": "Flare Testnet Coston2",
