@@ -6,9 +6,17 @@ The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.1.0/).
 
 ## [1.3.1] - 2025-06-05
 
+### Added
+
+- Verification of transfer transactions on the P-chain
+
 ### Changed
 
 - Delegation fee in percentages for backward compatibility.
+
+### Removed
+
+- Warning when node id in staking transaction is unknown.
 
 ## [1.3.0] - 2025-06-05
 
